@@ -57,6 +57,7 @@ us a note on ns-developers mailing list.</p>
 <li>In class <b>Ipv6Header</b>, new functions SetSource (), SetDestination (), GetSource () and GetDestination () are added, consistent with <b>Ipv4Header</b>. The existing functions had "Address" suffix in each of the function names, and are are deprecated now.</li>
 <li>In class <b>Ipv4InterfaceAddress</b>, new functions SetAddress () and GetAddress () are added, corresponding to SetLocal () and GetLocal () respectively. This is done to keep consistency with <b>Ipv4InterfaceAddress</b>.</li>
 <li>With the new support for IPv6 Nix-Vector routing, we have all the new APIs corresponding to IPv4 Nix-Vector routing. Specific to the user, there is an Ipv6NixVectorHelper class which can be set in the InternetStackHelper, and works similar to Ipv4NixVectorHelper.</li>
+<li>In class <b>Ipv4InterfaceAddress</b>, a new function IsInSameSubnet () is added to check if both the IPv4 addresses are in the same subnet. Also, it is consistent with <b>Ipv6InterfaceAddress::IsInSameSubnet ()</b>.</li>
 </ul>
 <h2>Changes to existing API:</h2>
 <ul>
@@ -69,7 +70,7 @@ us a note on ns-developers mailing list.</p>
 </ul>
 <h2>Changed behavior:</h2>
 <ul>
-<li></li>
+<li>Nix-Vector routing supports topologies with multiple WiFi networks using the same WiFi channel object.</li>
 </ul>
 
 <hr>
